log/2022-03-24T14:31:56+08:00.log
[33m[01m[05m[ You are changing the branch: lab1-1-Extra ][0m
Autotest: Begin at Thu Mar 24 14:31:56 CST 2022
[32m[ readelf.c found ][0m
rm -rf *.o
rm readelf
rm: cannot remove 'readelf': No such file or directory
make: *** [Makefile:16: clean] Error 1
gcc -I./ -c main.c
gcc -I./ -c readelf.c
readelf.c: In function 'readelf':
readelf.c:77:14: error: expected expression before ')' token
   77 |          if ()
      |              ^
readelf.c:84:15: warning: too many arguments for format [-Wformat-extra-args]
   84 |       printf ("Overlay at page va : 0x%x\n", Nr - 1, ((Elf32_Phdr *)(ptr_ph_table + (Nr - 1) * ph_entry_size))->p_vaddr);
      |               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
readelf.c:86:15: warning: too many arguments for format [-Wformat-extra-args]
   86 |       printf ("Conflict at page va : 0x%x\n", Nr - 1, ((Elf32_Phdr *)(ptr_ph_table + (Nr - 1) * ph_entry_size))->p_vaddr);
      |               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [Makefile:6: readelf.o] Error 1
[31m[01m[ Cannot find your readelf. Please check your readelf.c. ][0m
[33m[01m[ You got 0 (of 100) this time. Thu Mar 24 14:31:58 CST 2022 ][0m
Autotest: End at Thu Mar 24 14:31:58 CST 2022
